<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Penn StudySpaces</string>
    <string name="main_no_items">No rooms available</string>
    <string name="search_button">Search</string>
    <string name="private_check_box">Private</string>
    <string name="whiteboard_check_box">Whiteboard</string>
    <string name="computer_check_box">Computer</string>
    <string name="projector_check_box">Projector</string>
    <string name="reservable_check_box">Reservable</string>
    <string name="map">Map</string>
    <string name="details">Details</string>
    <string name="infoButton">infoButton</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="remove_favorites">Unfavorite</string>
    <string name="your_favorite">This is your favorite StudySpace</string>
    <string name="add_calendar">Add to Calendar</string>
    <string name="add_reserve">Reserve Online</string>
    <string name="add_text">Notify friends</string>
    <string name="favorites_button">Favorites</string>
    <string name="mapviewbtn">MapView</string>
    <string name="Edit">Edit</string>
    <string name="mapview_button">MapView</string>
    <string name="history">history</string>
    <string name="clear_history">Clear History</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="info">info</string>
    <string name="mapButton">mapButton</string>
    <string name="add_notes_here">Edit notes here:</string>
    <string name="save">Save</string>
    <string name="available_now">AVAILABLE NOW</string>
    <string name="computer_icon">computer_icon</string>
    <string name="last_reservation">Last reservation: </string>
    <string name="projector_icon">projector_icon</string>
    <string name="takepic">Take Picture</string>
    <string name="choosepic">Choose Picture</string>
    <string name="deletepic">Delete Picture</string>

</resources>