<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgrepeat"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
               
        <ImageView
            android:contentDescription="@string/history"
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_history" />

        <Button
            android:id="@+id/clearHistory"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="140dp"
            android:background="@color/lightblue"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/clear_history"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fbutton"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onFavClick"
                android:padding="10dp"
                android:text="@string/statistics"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/statistics_button"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/yellow" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/reservebtn"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onSearchClick"
            android:padding="10dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/addcalenderbtn"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onMapViewClick"
            android:padding="10dp"
            android:text="@string/mapviewbtn"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/filter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="Filter Results" >
        <requestFocus />
    </EditText>
    
    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/main_no_items" />

</LinearLayout>